# cheetah-os

./: .gitignore  README.md
user/Naverlabs_Controller/: CMakeLists.txt  LowLevelUserParameters.h  Lowlevel_Controller.cpp  Lowlevel_Controller.hpp  class_lcm.py  ctrl_eaxmple.py  data.txt  demo_lowlevel_listener  demo_lowlevel_listener.cpp  demo_lowlevel_listener.py  demo_lowlevel_publisher.py  demo_state_publisher.cpp  inference.py  lowlevel_cmd.hpp  lowlevel_state.hpp  main.cpp  publisher.py  subscriber.py  test.json  test_rapid.json  test_rough.json  thread_main.py
user/Naverlabs_Controller/lcm_msg/: demo_lowlevel_listener.py  demo_lowlevel_publisher.py
user/Naverlabs_Controller/lcm_script/demo/: ctrl_eaxmple.py  demo_lowlevel_listener.py  demo_lowlevel_publisher.py
user/Naverlabs_Controller/lcm_script/deploy/legged_gym/: lcm_agent.py  play_legged_gym.py  state_estimator.py
user/Naverlabs_Controller/lcm_script/deploy/rapid_locomotion/: lcm_agent.py  play_rapid_loco.py  stand_up_down.py  wrapper.py
user/Naverlabs_Controller/lcm_script/deploy/walk_these_ways/: lcm_agent.py  play_walk_ways.py  state_estimator.py
user/Naverlabs_Controller/lcm_script/legacy/: real_inference.py  stand_up_down.py
user/Naverlabs_Controller/lcm_script/legacy/msg/: class_lcm.py
user/Naverlabs_Controller/lcm_script/rapid_locomotion_inference/: lowlevel_cmd_publisher.py  play_rapid_loco.py
user/Naverlabs_Controller/lcm_script/rapid_locomotion_inference/lowlevel_msg/: lowlevel_state.py
user/Naverlabs_Controller/lcm_script/realworld/: real_inference.py  real_publisher.py  real_subscriber.py  real_test.py
user/Naverlabs_Controller/lcm_script/simulation/: inference.py  publisher.py  subscriber.py  test.py  trot_joint.json
(+23 files in other folders)
